resolve conflicts
(internal 96d67a5945e624d335451d34b4a23d9172335ed7)