@@ -39,6 +39,8 @@ ext.leafProjects = leafProjects // Publish as external variable
 ext {
     sonaUser = findProperty('SONATYPE_NEXUS_USERNAME') ?:  System.getenv('SONATYPE_NEXUS_USERNAME') ?: "FakeUser"
     sonaPass = findProperty('SONATYPE_NEXUS_PASSWORD') ?:  System.getenv('SONATYPE_NEXUS_PASSWORD') ?: "FakePass"
+
+    testTags = null // Default test tags
 }
 
 // Default test categories
@@ -69,6 +71,9 @@ configure(leafProjects) {
     // Defines versions of dependencies to be used by subprojects
     // https://github.com/spring-gradle-plugins/dependency-management-plugin#dependency-management-dsl
     dependencyManagement {
+        imports {
+            mavenBom 'org.junit:junit-bom:5.14.0'
+        }
         dependencies {
             dependency ('com.epam.deltix:thread-affinity:1.0.4')
 
@@ -100,6 +105,7 @@ configure(leafProjects) {
 
             dependency 'org.jetbrains:annotations:24.1.0'
 
+            dependency "junit:junit:4.13.2"
             dependency "org.mockito:mockito-core:5.15.2"
         }
     }
@@ -124,9 +130,27 @@ configure(leafProjects) {
         compileOnly 'com.google.code.findbugs:jsr305'
         compileOnly 'com.google.code.findbugs:annotations'
 
-        testImplementation 'junit:junit:4.12'
+        testCompileOnly 'junit:junit'
+
+        testImplementation "org.mockito:mockito-core"
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
         spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.9.0'
+    }
+
+    test {
+        useJUnitPlatform {
+            if (testTags != null) {
+                setIncludeTags testTags.split(',') as Set
+            }
+        }
+
+        // sync logging to not mix up messages from different tests
+        jvmArgs '-Dgflog.sync=true', '-Dgflog.console.appender.wrap=true'/*, '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'*/
     }
 
     spotbugs {
